# poem-generator

./: .gitignore  LICENSE  README.md  poem-generator.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/res/: night_on_the_galactic_railroad.txt  run_melos.txt
